--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -28,21 +28,20 @@ jobs:
 
         apt update && apt install -y xz-utils build-essential curl bc kmod cpio flex clang libncurses5-dev libelf-dev libssl-dev dwarves bison ccache rsync wget zstd
         
-        mkdir -p /usr/src/kernel && cd /usr/src/kernel
+        mkdir -p /usr/src/kernel
         
-        wget https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${{ inputs.kvnum }}.tar.xz        
-        tar axf linux-*.tar.xz      
+        cd /usr/src/kernel && curl -o linux-${{ inputs.kvnum }}.tar.xz https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${{ inputs.kvnum }}.tar.xz        
+        cd /usr/src/kernel && tar axf linux-${{ inputs.kvnum }}.tar.xz        
         rm /usr/src/kernel/linux-${{ inputs.kvnum }}.tar.xz            
         
-        cd /usr/src/kernel/linux-${{ inputs.kvnum }}
-        curl -o /usr/src/kernel/linux-${{ inputs.kvnum }}/.config  https://git.alpinelinux.org/aports/plain/main/linux-lts/virt.x86_64.config        
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && curl -o .config  https://git.alpinelinux.org/aports/plain/main/linux-lts/virt.x86_64.config        
         
-        ./scripts/config --disable SYSTEM_TRUSTED_KEYS
-        ./scripts/config --disable SYSTEM_REVOCATION_KEYS        
-        ./scripts/config --disable DEBUG_INFO
-        ./scripts/config --enable DEBUG_INFO_NONE 
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable SYSTEM_TRUSTED_KEYS
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable SYSTEM_REVOCATION_KEYS        
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable DEBUG_INFO
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --enable DEBUG_INFO_NONE 
         
-        nice make CC="ccache clang" -j`nproc` bindeb-pkg &&  cp ../*.deb /tmp/artifacts/' 
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && nice make CC="ccache clang" -j`nproc` bindeb-pkg &&  cp ../*.deb /tmp/artifacts/' 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
