--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -19,12 +19,15 @@ jobs:
       volumes:
         - ${{ github.workspace }}:/src
     steps:
+    - uses: actions/checkout@v3
     - name: Build
       shell: bash
       run: |        
         olddir=$(pwd)
 
         mkdir -p /tmp/artifacts
+        
+        cp config.amd64 /tmp/artifacts
 
         apt update && apt install -y xz-utils build-essential curl bc kmod cpio flex clang libncurses5-dev libelf-dev libssl-dev dwarves bison ccache rsync wget zstd
         
@@ -34,14 +37,14 @@ jobs:
         cd /usr/src/kernel && tar axf linux-${{ inputs.kvnum }}.tar.xz        
         rm /usr/src/kernel/linux-${{ inputs.kvnum }}.tar.xz            
         
-        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && curl -o .config  https://git.alpinelinux.org/aports/plain/main/linux-lts/virt.x86_64.config        
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && cp /tmp/artifacts/config.amd64 .config
         
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable SYSTEM_TRUSTED_KEYS
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable SYSTEM_REVOCATION_KEYS        
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable DEBUG_INFO
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --enable DEBUG_INFO_NONE 
         
-        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && nice make CC="ccache clang" -j8 bindeb-pkg &&  cp ../*.deb /tmp/artifacts/
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && nice make CC="ccache clang" -j`nproc` bindeb-pkg &&  cp ../*.deb /tmp/artifacts/
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
