--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -14,6 +14,7 @@ jobs:
     name: ARM64 Kernel
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
     - name: Build
