--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -44,7 +44,7 @@ jobs:
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --disable DEBUG_INFO
         cd /usr/src/kernel/linux-${{ inputs.kvnum }} && ./scripts/config --enable DEBUG_INFO_NONE 
         
-        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && nice make CC="ccache gcc -j`nproc` bindeb-pkg &&  cp ../*.deb /tmp/artifacts/
+        cd /usr/src/kernel/linux-${{ inputs.kvnum }} && nice make CC="ccache gcc" -j`nproc` bindeb-pkg &&  cp ../*.deb /tmp/artifacts/
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
